# PicPicker

./: .gitignore  AppIcon.icns  CMakeLists.txt  LICENSE  README.md  application.qrc  pickpic.pro  picpicker.pro
src/: AppModel.cpp  AppModel.h  log.h  main.cpp  mainwindow.cpp  mainwindow.h
src/controller/: opendialogcontroller.cpp  opendialogcontroller.h  picpickercontroller.cpp  picpickercontroller.h
src/model/: appconstants.cpp  appconstants.h  appinfo.cpp  appinfo.h  appmodel.cpp  appmodel.h  clickablelabel.cpp  clickablelabel.h
src/ui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  opendialog.cpp  opendialog.h  opendialog.ui  picpicker.cpp  picpicker.h  picpicker.ui
